# victor-openai-example

./: 404.html  Makefile  README.md  index.html  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml
docs/: index.md
search/: search_index.json
victor_openai_example/: __init__.py
